# Goose

./: .clang-format  .gitignore  CMakeLists.txt  GenericOstreamOperators.hpp  LICENSE  Operators.hpp  README.md  main.cpp
.github/workflows/: amalgamate.yml  cmake-builds-mac-linux.yml  cmake.yml  publish.yml  release.yml
ci/: config_compiler.sh  config_gcc.sh
include/gos/: goose.hpp  gos.hpp
include/gos/concepts/: collection.hpp  container.hpp  pair.hpp
include/gos/config/: concept.hpp  cpp_features.hpp  type_traits.hpp
include/gos/conversions/: ostream.hpp  string.hpp
test/: CMakeLists.txt  array.cpp  main.cpp  pair.cpp  string.cpp  tests.cpp  unordered_map.cpp  vector.cpp
